# survAIv

./: .gitignore  CMakeLists.txt  README.md  _transform_dashboard.py  build_go.sh  flash.sh  partitions_no_ota.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.no_ota
.github/workflows/: build-firmware.yml
atoms3/: CMakeLists.txt  flash.sh  sdkconfig.defaults
boards/screen/: CMakeLists.txt  screen.cpp
boards/screen/include/: screen.h
c3oled/: CMakeLists.txt  flash.sh  partitions.csv  sdkconfig.defaults
cloud/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  Procfile  README.md  build.bat  build.sh  docker-compose.yml  go.mod  go.sum  main.go  survaiv.toml.example
cloud/internal/agent/: agent.go  parse.go  prompts.go  research.go
cloud/internal/config/: config.go  file.go
cloud/internal/crypto/: eip712.go  keccak.go  sign.go
cloud/internal/dashboard/: assets.go  cpu_unix.go  cpu_windows.go  handlers.go  index.html  server.go  state.go
cloud/internal/db/: compat.go  db.go  migrations.go
cloud/internal/dynconfig/: dynconfig.go
cloud/internal/httpclient/: client.go
cloud/internal/ledger/: ledger.go
cloud/internal/models/: hardcoded.go  openrouter.go  registry.go  selection.go
cloud/internal/news/: news.go
cloud/internal/polymarket/: clob.go  geoblock.go  markets.go
cloud/internal/provider/: adapter.go  claw402.go  custom.go  tx402.go  (+2 more)
docs/: index.html
main/: CMakeLists.txt  Kconfig.projbuild  agent.cpp  agent.h  claw402.cpp  claw402.h  clob.cpp  clob.h  config.cpp  config.h  crypto.cpp  crypto.h  dashboard_state.cpp  dashboard_state.h  http.cpp  http.h  json_util.cpp  json_util.h  ledger.cpp  ledger.h  main.cpp  mdns_adv.cpp  mdns_adv.h  model_registry.cpp  model_registry.h  news.cpp  news.h  onboard.cpp  onboard.h  polymarket.cpp  polymarket.h  provider.cpp  provider.h  telemetry.cpp  telemetry.h  types.h  wallet.cpp  wallet.h  web_assets.h  webserver.cpp  (+7 more)
s3/: CMakeLists.txt  flash.sh  partitions.csv  partitions_no_ota.csv  sdkconfig.defaults
stickc2/: CMakeLists.txt  flash.sh  partitions_no_ota.csv  sdkconfig.defaults  sdkconfig.defaults.no_ota
tools/: gen_wallet.py
tqt/: CMakeLists.txt  flash.sh  sdkconfig.defaults
(+18 files in other folders)
